[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/land/monochrome_tilemap_packed.png" type="Texture" id=1]
[ext_resource path="res://rock1.tscn" type="PackedScene" id=2]
[ext_resource path="res://rock3.tscn" type="PackedScene" id=3]
[ext_resource path="res://rock2.tscn" type="PackedScene" id=4]
[ext_resource path="res://rock4.tscn" type="PackedScene" id=5]
[ext_resource path="res://rock.gd" type="Script" id=6]

[node name="background" type="Node2D"]

[node name="background" type="Sprite" parent="."]
position = Vector2( 500, 300 )
scale = Vector2( -67.4405, 39.4055 )
z_index = -2
texture = ExtResource( 1 )
vframes = 18
hframes = 20
frame = 111

[node name="rock" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="rock1" parent="rock" instance=ExtResource( 2 )]
position = Vector2( 100, 20 )

[node name="rock2" parent="rock" instance=ExtResource( 2 )]
position = Vector2( 160, 500 )

[node name="rock3" parent="rock" instance=ExtResource( 2 )]
position = Vector2( 500, 450 )

[node name="rock4" parent="rock" instance=ExtResource( 2 )]
position = Vector2( 1000, 100 )

[node name="rock5" parent="rock" instance=ExtResource( 4 )]
position = Vector2( 40, 300 )

[node name="rock6" parent="rock" instance=ExtResource( 4 )]
position = Vector2( 400, 200 )

[node name="rock7" parent="rock" instance=ExtResource( 4 )]
position = Vector2( 800, 100 )

[node name="rock8" parent="rock" instance=ExtResource( 4 )]
position = Vector2( 900, 500 )

[node name="rock9" parent="rock" instance=ExtResource( 3 )]
position = Vector2( 600, 50 )

[node name="rock10" parent="rock" instance=ExtResource( 3 )]
position = Vector2( 700, 350 )

[node name="rock11" parent="rock" instance=ExtResource( 3 )]
position = Vector2( 200, 100 )

[node name="rock12" parent="rock" instance=ExtResource( 3 )]
position = Vector2( 300, 400 )
scale = Vector2( 0.997796, 1.01016 )

[node name="rock13" parent="rock" instance=ExtResource( 5 )]
position = Vector2( 500, 200 )

[node name="rock14" parent="rock" instance=ExtResource( 5 )]
position = Vector2( 600, 100 )

[node name="rock15" parent="rock" instance=ExtResource( 5 )]
position = Vector2( 700, 500 )

[node name="rock16" parent="rock" instance=ExtResource( 5 )]
position = Vector2( 20, 500 )
